k8s/03-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: jobtracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: jobtracker
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
