k8s/05-ingestion-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-service
  namespace: jobtracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingestion-service
  template:
    metadata:
      labels:
        app: ingestion-service
    spec:
      containers:
        - name: ingestion-service
          image: tracker/ingestion-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: jobtracker
spec:
  selector:
    app: ingestion-service
  ports:
    - port: 8082
      targetPort: 8082
