k8s/07-core-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-service
  namespace: jobtracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: core-service
  template:
    metadata:
      labels:
        app: core-service
    spec:
      containers:
        - name: core-service
          image: tracker/core-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          readinessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: jobtracker
spec:
  selector:
    app: core-service
  ports:
    - port: 8084
      targetPort: 8084
